--- a/src/main/webapp/blocks/header.xhtml
+++ b/src/main/webapp/blocks/header.xhtml
@@ -14,6 +14,12 @@
             <li>
                 <h:link value="Log in" outcome="login"/>
             </li>
+            <li>
+                <h:link value="Log out" outcome="logout"/>
+            </li>
+            <li>
+                <h:link value="Admin" outcome="admin"/>
+            </li>
         </ul>
     </div>
 </f:view>
