--- a/src/main/webapp/blocks/header.xhtml
+++ b/src/main/webapp/blocks/header.xhtml
@@ -18,7 +18,7 @@
                 <h:link value="Log out" outcome="logout"/>
             </li>
             <li>
-                <h:link value="Admin" outcome="admin"/>
+                <h:link value="Admin" outcome="protected/admin"/>
             </li>
         </ul>
     </div>
