master: animals' addition created

--- a/src/main/webapp/blocks/header.xhtml
+++ b/src/main/webapp/blocks/header.xhtml
@@ -18,7 +18,13 @@
                 <h:link value="Log out" outcome="logout"/>
             </li>
             <li>
-                <h:link value="Admin" outcome="protected/admin"/>
+                <h:link value="Admin" outcome="admin/admin"/>
+            </li>
+            <li>
+                <h:link value="Registration" outcome="register"/>
+            </li>
+            <li>
+                <h:link value="Add animal" outcome="user/animal-registration"/>
             </li>
         </ul>
     </div>
