--- a/src/main/webapp/blocks/header.xhtml
+++ b/src/main/webapp/blocks/header.xhtml
@@ -18,7 +18,7 @@
                 <h:link value="Log out" outcome="logout"/>
             </li>
             <li>
-                <h:link value="Admin" outcome="admin/admin"/>
+                <h:link id="admin" value="Admin" outcome="admin/admin"/>
             </li>
             <li>
                 <h:link value="Registration" outcome="register"/>
