master: animal's list added to the form

--- a/src/main/webapp/blocks/admin/admin-header.xhtml
+++ b/src/main/webapp/blocks/admin/admin-header.xhtml
@@ -20,7 +20,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="../../views/admin/home-admin.xhtml">Home</a></li>
+                    <li><a href="../../views/admin/home-admin.xhtml">Home</a></li>
                     <li><a href="../../views/register.xhtml">Registration</a></li>
                     <li><a href="../../views/user/animal-registration.xhtml">Add animal</a></li>
                     <li><a href="../../views/login.xhtml">Log in</a></li>
@@ -38,5 +38,3 @@
     </div>
 </ui:composition>
 </html>
-        <!--<a href="#" onclick="mojarra.jsfcljs(document.getElementById('j_idt21'),{'j_idt21:j_idt23':'j_idt21:j_idt23'},'');return false">-->
-        <!--logout</a>-->
