--- a/src/main/webapp/blocks/user/user-header.xhtml
+++ b/src/main/webapp/blocks/user/user-header.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <ui:composition>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div style="background-color: #001a35" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed"
@@ -20,7 +20,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../../views/admin/home-admin.xhtml">Home</a></li>
+                    <li><a href="../../views/user/home-user.xhtml">Home</a></li>
                     <li><a href="../../views/user/user-animals.xhtml">My animals</a></li>
                     <li><a href="../../views/register.xhtml">Registration</a></li>
                     <li><a href="../../views/user/animal-registration.xhtml">Add animal</a></li>
