master: users' table added

--- a/src/main/webapp/blocks/admin/admin-header.xhtml
+++ b/src/main/webapp/blocks/admin/admin-header.xhtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="../../views/admin/home-admin.xhtml">Home</a></li>
                     <li><a href="../../views/user/user-animals.xhtml">My animals</a></li>
+                    <li><a href="../../views/admin/users.xhtml">Users' list</a></li>
                     <li><a href="../../views/register.xhtml">Registration</a></li>
                     <li><a href="../../views/user/animal-registration.xhtml">Add animal</a></li>
                     <li><a href="../../views/login.xhtml">Log in</a></li>
