master: updating user info added

--- a/src/main/webapp/blocks/user/user-animals-block.xhtml
+++ b/src/main/webapp/blocks/user/user-animals-block.xhtml
@@ -56,7 +56,7 @@
             </p:column>
             <f:facet name="footer">
                 <p:commandButton process="checkboxDT"
-                                 icon="ui-icon-search"
+                                 icon="ui-icon-delete"
                                  value="Delete"
                                  action="#{animalOfUserBean.deleteAll}"
                                  update=":form"/>
