--- a/src/main/webapp/blocks/header.xhtml
+++ b/src/main/webapp/blocks/header.xhtml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <ui:composition>
@@ -30,7 +29,9 @@
                         </h:form>
                         <script type="text/javascript" src="/javax.faces.resource/jsf.js.xhtml?ln=javax.faces"></script>
                         <a href="#"
-                           onclick="mojarra.jsfcljs(document.getElementById('id'),{'id:link':'id:link'},'');return false">Log out</a>
+                           onclick="mojarra.jsfcljs(document.getElementById('id'),{'id:link':'id:link'},'');return false">
+                            Log out
+                        </a>
                     </li>
                 </ul>
             </div>
