master: design little changed

--- a/src/main/webapp/blocks/admin/admin-header.xhtml
+++ b/src/main/webapp/blocks/admin/admin-header.xhtml
@@ -24,10 +24,9 @@
                     <li><a href="../../views/admin/users.xhtml">Users' list</a></li>
                     <li><a href="../../views/register.xhtml">Registration</a></li>
                     <li><a href="../../views/user/animal-registration.xhtml">Add animal</a></li>
-                    <li><a href="../../views/login.xhtml">Log in</a></li>
                     <li>
                         <h:form id="id">
-                            <h:commandLink id="link" action="#{authenticationBean.doLogout}"/>
+                            <h:commandLink class="head" id="link" action="#{authenticationBean.doLogout}"/>
                         </h:form>
                         <script type="text/javascript" src="/javax.faces.resource/jsf.js.xhtml?ln=javax.faces"></script>
                         <a href="#"
